add some period

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <header class="design-one">
         <img
-        src="/assets/img/bub.png"
+        src="./assets/img/bub.png"
         alt="TeddyBear"
         class="company-logo"/>
     </header>
